--- a/src/Makefile
+++ b/src/Makefile
@@ -1,19 +1,17 @@
-
-lint:
-	@echo "Lint Project"
-	@echo "Usage: make lint"
+# usage: make {command}
+# example: make lint
+int:
+	@echo "Lint project"
 	poetry run flake8
 	poetry run mypy .
 	poetry run black --check .
 	poetry run isort --check-only .
 
 fix:
-	@echo "Lint and fix Project"
-	@echo "Usage: make fix"
+	@echo "Fix project"
 	poetry run black .
 	poetry run isort .
 
 test:
-	@echo "Run tests for Project"
-	@echo "Usage: make test"
+	@echo "Run tests"
 	poetry run pytest
